# playheads

./: .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  Makefile  QUICK_FIX.md  QUICK_START.md  README.md  TESTING_GUIDE.md  package-lock.json  package.json  pyproject.toml  test-setup.sh
apps/backend/: .env.example  APPLE_MUSIC.md  agent.py  apple_music.py  apply_migration.py  database.py  debug_tts.py  init_db.py  main.py  minimax_client.py  models.py  playheads.db  pyproject.toml  spotify_client.py  state.py  test_conversations.py  test_tts.py  title_generator.py
apps/backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/backend/migrations/: 001_enhance_conversations.sql
apps/ios/: README.md
apps/ios/MusicAgent/: ContentView.swift  MusicAgentApp.swift  Theme.swift
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web-new/: .cta.json  MIGRATION_STATUS.md  package-lock.json  package.json
apps/web-new/src/: routeTree.gen.ts  styles.css
apps/web-new/src/components/: AppLayout.tsx  AppleMusicLinkOverlay.tsx  ChatInterface.tsx  DeleteConfirmDialog.tsx  LoginScreen.tsx  NewChatView.tsx  PlaylistSidebar.tsx  RecordPlayer.tsx  SkeletonLoader.tsx
apps/web-new/src/hooks/: useAppleMusic.ts  useChat.ts  useChatHelpers.ts
apps/web-new/src/routes/: __root.tsx  _layout.tsx
apps/web-new/src/store/: authStore.ts  chatStore.ts
apps/web/src/: App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: generate_apple_token.py
supabase/: config.toml
(+63 files in other folders)
